# ChessGameForLinux

./: CMakeLists.txt  README.md
Work/: Algorithms.h  Bishop.cpp  Bishop.h  Board.cpp  Board.h  Coordinates.h  Exceptions.h  Figure.cpp  Figure.h  Game.cpp  Game.h  Header.h  ImageBoard.h  ImageMenu.h  King.cpp  King.h  Knight.cpp  Knight.h  MyDeque.h  Network.cpp  Network.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  StockFish.cpp  StockFish.h  main.cpp
